<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/i_nombre"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <EditText
            android:id="@+id/eT_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/i_correo"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/i_nombre">
        <EditText
            android:id="@+id/eT_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/login_email"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/i_password"
        android:layout_below="@id/i_correo"
        android:layout_width="280dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/eT_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/i_pass2"
        android:layout_below="@id/i_password"
        android:layout_width="280dp"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/eT_password2"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password2"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/b_crearCuenta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/i_pass2"
        android:layout_toEndOf="@id/b_cancelar"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/create"/>
    <Button
        android:id="@+id/b_cancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/i_pass2"
        android:text="@string/cancel"/>
</RelativeLayout>